[package]
name = "cryptopals"
version = "0.1.0"
authors = ["Hasan Gondal <hasan@afraidlabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
hex = "0.4.3"
base64 = "0.13.0"

[dependencies.phf]
version = "0.8.0"
features = ["macros"]

[dependencies.openssl]
version = "0.10.34"
features = ["vendored"]
